tests/rosetta/transpiler/erl/100-doors.error
exit status 127
escript: exception error: no case clause matching [1,2,3,4,5,6,7,8,9]
  in function  main:'-main/1-Fun5_loop/4-4-'/5 (/workspace/mochi/tests/rosetta/transpiler/erl/100-doors.erl, line 44)
  in call from main:'-main/1-Fun4_loop/2-3-'/2 (/workspace/mochi/tests/rosetta/transpiler/erl/100-doors.erl, line 62)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/100-doors.erl, line 67)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3 
